<resources>
    <string name="AME_editEffect_inspector_aberration">Aberration</string>
    <string name="AME_editEffect_inspector_angle">Angle</string>
    <string name="AME_editEffect_inspector_bending">Bending</string>
    <string name="AME_editEffect_inspector_bling">Bling</string>
    <string name="AME_editEffect_inspector_blur">Blur</string>
    <string name="AME_editEffect_inspector_border">Border</string>
    <string name="AME_editEffect_inspector_brightness">Brightness</string>
    <string name="AME_editEffect_inspector_color">Color</string>
    <string name="AME_editEffect_inspector_coolness">Coolness</string>
    <string name="AME_editEffect_inspector_crease">Crease</string>
    <string name="AME_editEffect_inspector_definition">Definition</string>
    <string name="AME_editEffect_inspector_deformation">Deformation</string>
    <string name="AME_editEffect_inspector_degree">Degree</string>
    <string name="AME_editEffect_inspector_diameter">Diameter</string>
    <string name="AME_editEffect_inspector_direction">Direction</string>
    <string name="AME_editEffect_inspector_displacement1">Displacement 1</string>
    <string name="AME_editEffect_inspector_displacement2">Displacement 2</string>
    <string name="AME_editEffect_inspector_frequency">Frequency</string>
    <string name="AME_editEffect_inspector_glare">Glare</string>
    <string name="AME_editEffect_inspector_grain">Grain</string>
    <string name="AME_editEffect_inspector_haze">Haze</string>
    <string name="AME_editEffect_inspector_height">Height</string>
    <string name="AME_editEffect_inspector_horizontal">Horizontal</string>
    <string name="AME_editEffect_inspector_intensity">Intensity</string>
    <string name="AME_editEffect_inspector_leftright">Horizontal</string>
    <string name="AME_editEffect_inspector_leftsize">Left Size</string>
    <string name="AME_editEffect_inspector_lowQuality">Low quality</string>
    <string name="AME_editEffect_inspector_luminous">Glow</string>
    <string name="AME_editEffect_inspector_material1">Texture</string>
    <string name="AME_editEffect_inspector_noise">Noise</string>
    <string name="AME_editEffect_inspector_offset">Offset</string>
    <string name="AME_editEffect_inspector_offset1">Offset 1</string>
    <string name="AME_editEffect_inspector_offset2">Offset 2</string>
    <string name="AME_editEffect_inspector_opacity">Opacity</string>
    <string name="AME_editEffect_inspector_pattern">Pattern</string>
    <string name="AME_editEffect_inspector_position">Position</string>
    <string name="AME_editEffect_inspector_position1">Position 1</string>
    <string name="AME_editEffect_inspector_position2">Position 2</string>
    <string name="AME_editEffect_inspector_quantity">Quantity</string>
    <string name="AME_editEffect_inspector_radius">Radius</string>
    <string name="AME_editEffect_inspector_rate">Velocity</string>
    <string name="AME_editEffect_inspector_ratio">Ratio</string>
    <string name="AME_editEffect_inspector_ridges">Ridges</string>
    <string name="AME_editEffect_inspector_rightsize">Right Size</string>
    <string name="AME_editEffect_inspector_ripple">Ripple</string>
    <string name="AME_editEffect_inspector_rotation">Rotation</string>
    <string name="AME_editEffect_inspector_rotation1">Y-axis rotation</string>
    <string name="AME_editEffect_inspector_rotation2">X-axis rotation</string>
    <string name="AME_editEffect_inspector_rotationspeed">Rotation</string>
    <string name="AME_editEffect_inspector_roughness">Grain</string>
    <string name="AME_editEffect_inspector_saturation">Saturation</string>
    <string name="AME_editEffect_inspector_scope">Zoom</string>
    <string name="AME_editEffect_inspector_scratch">Scratch</string>
    <string name="AME_editEffect_inspector_screenratio">Ratio</string>
    <string name="AME_editEffect_inspector_sharpness">Sharpness</string>
    <string name="AME_editEffect_inspector_size">Size</string>
    <string name="AME_editEffect_inspector_size1">Zoom 1</string>
    <string name="AME_editEffect_inspector_size2">Zoom 2</string>
    <string name="AME_editEffect_inspector_size3">Zoom 3</string>
    <string name="AME_editEffect_inspector_speed">Speed</string>
    <string name="AME_editEffect_inspector_splitRatio">splitRatio</string>
    <string name="AME_editEffect_inspector_stroke">Width</string>
    <string name="AME_editEffect_inspector_tempo">Tempo</string>
    <string name="AME_editEffect_inspector_texture">Texture</string>
    <string name="AME_editEffect_inspector_updown">Vertical</string>
    <string name="AME_editEffect_inspector_vertical">Vertical</string>
    <string name="AME_editEffect_inspector_vibe">Outline</string>
    <string name="AME_editEffect_inspector_vignette">Vignette</string>
    <string name="AME_editEffect_inspector_vortex">Vortex</string>
    <string name="AME_editEffect_inspector_width">Width</string>
    <string name="AME_editEffect_inspector_xAxis">X-axis rotation</string>
    <string name="AME_editEffect_inspector_xaxis">X-axis</string>
    <string name="AME_editEffect_inspector_xoffset">X-offset</string>
    <string name="AME_editEffect_inspector_yAxis">Y-axis rotation</string>
    <string name="AME_editEffect_inspector_yaxis">Y-axis</string>
    <string name="AME_editEffect_inspector_yoffset">Y-offset</string>
    <string name="AME_editEffect_inspector_zoom1">Zoom 1</string>
    <string name="AME_editEffect_inspector_zoom2">Zoom 2</string>
    <string name="AME_editEffect_inspector_zoom3">Zoom 3</string>
    <string name="AME_makeup_color">Color</string>
    <string name="AME_makeup_finish">Texture</string>
    <string name="AME_makeup_selectProperty_toast">Select current property first</string>
    <string name="AME_makeup_style">Style</string>
    <string name="AME_makeup_switchProperty_tooltip">Tap to switch properties</string>
    <string name="bu_">Select from Gallery</string>
    <string name="bua">Take photo</string>
    <string name="bz3">Learn more</string>
    <string name="c_l">Find friends</string>
    <string name="c_z">Add to Favorites</string>
    <string name="ca8">Added to Favorites</string>
    <string name="cd3">Agree</string>
    <string name="cs6">Album</string>
    <string name="cu0">Everyone</string>
    <string name="cvc">Downloading...</string>
    <string name="cyg">androidx.startup</string>
    <string name="cys">TikTok</string>
    <string name="cyt">@string/cyu</string>
    <string name="cyu">TikTok</string>
    <string name="cyw">\#TikTok</string>
    <string name="d1g">[{ \"relation\": [\"delegate_permission/common.handle_all_urls\"], \"target\": { \"namespace\": \"web\", \"site\": \"https://www.tiktok.com\" } }, {\"include\": \"https://tiktok.com/.well-known/assetlinks.json\"}]</string>
    <string name="d1k">Search for an account to mention</string>
    <string name="d5y">Translating...</string>
    <string name="d6z">Shape</string>
    <string name="d77">Discard</string>
    <string name="d7a">Added sound</string>
    <string name="dcu">Back</string>
    <string name="dez">Beauty</string>
    <string name="dgk">Add phone number</string>
    <string name="dm8">Block</string>
    <string name="dpx">Continue</string>
    <string name="dq0">Open</string>
    <string name="dzv">Can’t save video with this sound due to copyright regulations.</string>
    <string name="dzy">Cancel</string>
    <string name="e0b">Removed from Favorites</string>
    <string name="e2r">%1$s views</string>
    <string name="e44">@string/jwo</string>
    <string name="e45">@string/bu_</string>
    <string name="e46">Selected</string>
    <string name="e47">View photo</string>
    <string name="e48">@string/dzy</string>
    <string name="e7j">Connect to the internet and try again.</string>
    <string name="e8i">Select country/region</string>
    <string name="ecs">Cars</string>
    <string name="efk">Hashtags</string>
    <string name="eh_">Comment</string>
    <string name="eji">"Couldn't add comment"</string>
    <string name="emz">Enable</string>
    <string name="en0">"%1$s won't work unless you enable Google Play services."</string>
    <string name="en1">Enable Google Play services</string>
    <string name="en2">Install</string>
    <string name="en3">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="en4">Get Google Play services</string>
    <string name="en5">Google Play services availability</string>
    <string name="en6">Google Play services error</string>
    <string name="en7">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="en8">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="en9">Update</string>
    <string name="en_">"%1$s won't run unless you update Google Play services."</string>
    <string name="ena">Update Google Play services</string>
    <string name="enb">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="enc">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="eq1">Community Guidelines</string>
    <string name="eqj">Confirm</string>
    <string name="eqk">Open settings</string>
    <string name="etu">Copied</string>
    <string name="etw">Link copied</string>
    <string name="eu4">Start recording</string>
    <string name="creation_autocut_entry_point">AutoCut</string>
    <string name="ffh">Record video</string>
    <string name="ffi">Watch videos</string>
    <string name="fgl">Czech Republic</string>
    <string name="default_web_client_id">340331662088-6ubo66ljal3ianb35dr9clu3p0ea7v64.apps.googleusercontent.com</string>
    <string name="fi4">Delete</string>
    <string name="fix">Discard last clip?</string>
    <string name="fkw">Like</string>
    <string name="fkz">Restricted Mode</string>
    <string name="dm_fortuneCookie_001">May your year be sweeter than dessert!</string>
    <string name="dm_fortuneCookie_002">Here’s to a year of laughter and good times!</string>
    <string name="dm_fortuneCookie_003">Get ready to sparkle like a firework!</string>
    <string name="dm_fortuneCookie_004">Cheers to a year of epic adventures!</string>
    <string name="dm_fortuneCookie_005">May your resolutions be as bold as your snacks!</string>
    <string name="dm_fortuneCookie_006">Get ready for a year full of awesome surprises!</string>
    <string name="dm_fortuneCookie_007">Let the good vibes roll into the new year!</string>
    <string name="dm_fortuneCookie_008">May your year be filled with laughter!</string>
    <string name="dm_fortuneCookie_009">Time for new shenanigans!</string>
    <string name="dm_fortuneCookie_010">Let the confetti fly!</string>
    <string name="dm_fortuneCookie_011">Wishing you a year of fun!</string>
    <string name="dm_fortuneCookie_012">Happiness is just around the corner!</string>
    <string name="dm_fortuneCookie_013">Bring on the good vibes!</string>
    <string name="dm_fortuneCookie_014">May your year sparkle!</string>
    <string name="dm_fortuneCookie_015">Time for sweet memories!</string>
    <string name="dm_fortuneCookie_016">Let joy be your compass!</string>
    <string name="dm_fortuneCookie_017">Make this year legendary!</string>
    <string name="dm_fortuneCookie_018">Wishing you double the fun!</string>
    <string name="effect_tool_noconnection1">No internet connection</string>
    <string name="effect_tool_noconnection2">Connect to the internet and try again</string>
    <string name="effect_tool_noconnection_retry">Retry</string>
    <string name="n5t">Explore trending LIVE videos in TikTok!</string>
    <string name="n5u">Watch now</string>
    <string name="n5w">Following</string>
    <string name="qff">Following</string>
    <string name="qfg">Post</string>
    <string name="qfh">Inbox</string>
    <string name="qfm">Search on TikTok</string>
    <string name="thi">LIVE</string>
</resources>